jupyter extensions and developers scripts

--- a/scripts/analyze.ipynb
+++ b/scripts/analyze.ipynb
@@ -2,42 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3071ce2b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-13T11:40:54.754249Z",
-     "start_time": "2023-07-13T11:40:54.745866Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#%cd /app"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7099e696",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-13T11:41:47.790089Z",
-     "start_time": "2023-07-13T11:41:47.784539Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "a18370ce",
+   "id": "2dbab79f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-13T11:41:38.044032Z",
-     "start_time": "2023-07-13T11:41:36.450182Z"
+     "end_time": "2023-07-14T18:37:26.711924Z",
+     "start_time": "2023-07-14T18:37:26.697621Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/app\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "89391216",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-14T18:37:11.660335Z",
+     "start_time": "2023-07-14T18:37:11.649786Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c42d7562",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-14T18:37:26.667987Z",
+     "start_time": "2023-07-14T18:37:20.783358Z"
     }
    },
    "outputs": [],
@@ -49,10 +58,37 @@
     "from sklearn.metrics import f1_score\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import dvc.api\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.impute import KNNImputer\n",
+    "import dvc.api\n",
+    "\n",
+    "params = dvc.api.params_show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a03f06f6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-14T18:37:31.238103Z",
+     "start_time": "2023-07-14T18:37:29.401093Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.metrics import f1_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.impute import KNNImputer\n",
+    "import dvc.api\n",
     "\n",
     "params = dvc.api.params_show()\n",
     "\n",
@@ -66,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2bae76cd",
+   "id": "3ddb32b8",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "34ea09a1",
+   "id": "b7b5224b",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "902bf47a",
+   "id": "288763bd",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e71791fd",
+   "id": "acf06a4b",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f052b14",
+   "id": "5f8779e0",
    "metadata": {},
    "source": [
     "Atrybuty verified , reviewerId, asin, reviewerName, data_origin (łącznie 5) są to zmienna kategoryczna"
@@ -340,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9975ac5",
+   "id": "5869148f",
    "metadata": {},
    "source": [
     "Atrybuty reviewTime, unixReviewTime, vote, reviewTextLength, numbers_amount (łacznie 5) są to zmienna numeryczne"
@@ -348,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9406f9",
+   "id": "f32147bf",
    "metadata": {},
    "source": [
     "Oprócz tego mamy adres URL (image), z którego może zostać pobrany obraz o różnym rozmiarze. Zdjęcia zawierają zdjęcia produktu od recenzującego."
@@ -356,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e5ffe8",
+   "id": "eceb407c",
    "metadata": {},
    "source": [
     "Dodatokw atrybut style przechowuje słownik mogący rozbudować atrybuty jednak wynikałoby z tego pojawienie się wielu NaN, oraz trudno porównać rozmiar szamponu i ubrania\n"
@@ -364,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65f5b854",
+   "id": "521ce2e9",
    "metadata": {},
    "source": [
     "Zmienna wyjściowa można interpretować jako zmienną numeryczną co może pomóc w szukaniu korelacji jednak nie jest to preferowane. Jest to zmienna dyskretna, która może przyjąć jedną z kilku wartości/ kategori. Ludzie nie myślą o produkcie 2/5 jako o dwa razy gorszym od 4/5. Ludzie mają wyuczone pewne interpretacje ocen w typowych skaklach oceniania (1-5, 1-10), które interpretują raczej w sposób opisowy. W jakijś książce czytałem, że przeskalowanie takich skal na dziwne skale np. od 47-73 całkowicie zaburzało postrzeganie oceny. Zaczęto otrzymywać odmienne rozkłady etc."
@@ -373,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9a7cc5",
+   "id": "a7cc5021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e114a3",
+   "id": "45c6a894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8634b7d",
+   "id": "c1cc832f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690f119e",
+   "id": "71eb3ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8013d4fa",
+   "id": "63f121cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b740e2c0",
+   "id": "99a00dde",
    "metadata": {},
    "source": [
     "Obrazki są dołączone tylko do 5% rekordów. Dodatkowym pytaniem jest ile z tych linków jest działających <br>\n",
@@ -439,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe4501b8",
+   "id": "a53e5e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191fca1c",
+   "id": "9a134f2a",
    "metadata": {},
    "source": [
     "Możliwe, że pojawiają się obrazki jednym z dwóch duplikatów, albo dodatkowe informacje w style. Wymagalo dalszego zbadania"
@@ -463,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfcd4626",
+   "id": "c66f9ee2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4dbe52a",
+   "id": "97b03f55",
    "metadata": {},
    "source": [
     "Wydaj 3 największe korelacje: <br>\n",
@@ -496,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec2e9ee",
+   "id": "fc46541a",
    "metadata": {},
    "source": [
     "Overall nie ma wysokiej korelacji z jakąkolwiek zmienną. Największa korelacja overall:verified może świadczyć, że częściej weryfikowane są wyższe oceny"
@@ -505,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc634bcf",
+   "id": "652076f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7a2b5a",
+   "id": "e043e35c",
    "metadata": {},
    "source": [
     "Same zmienne numeryczne, posiadają  pewien potencjał widać wyraźnie, że dla dwóch komponentów PCA można już rozróźniać dobre i złe oceny"
@@ -543,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fa29ead",
+   "id": "fda03aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5aab3f0",
+   "id": "f2d4be80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc702672",
+   "id": "e0c766da",
    "metadata": {},
    "source": [
     "Łatwo rozpoznać słowa mogące świadczyć o sentymencie \"great\", 'well\", \"good\" możliwe, żę \"like\""
@@ -589,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1508cb7",
+   "id": "25015465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08e1f88",
+   "id": "a5d6ea92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2894afb5",
+   "id": "bdaf9fc2",
    "metadata": {},
    "source": [
     "Widać dużo jednoznacznie dobrych przymiotników przy ocenach = 5 <br>\n",
@@ -659,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6e825f",
+   "id": "4fd31c8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "742d076f",
+   "id": "18c028ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7874cab",
+   "id": "fde937dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22299c3d",
+   "id": "a64e6ce2",
    "metadata": {},
    "source": [
     "Należy przeprowadzić dogłebną anlizę reviewText oraz summary, mogą zawierać wiele dodatkowych przydatnych inforamcji pomagających ustalić overall. Należałoby również spróbować zamieć datę na zmienną kategoryczną mówiącą np. o okresach w roku (przed Świętami, wakacje, początek roku szkolnego) może pomogłoby to znaleźć powiązania. Także samo sprawdzenie, czy obecność zdjęcia/ ich ilość jak wpływa na overall. Połączenie tego z danymi numerycznymi może pomóc stowrzyć model klasyfikiacji o wysokim stopniu accuracy"
@@ -773,12 +809,13 @@
      "varRefreshCmd": "cat(var_dic_list()) "
     }
    },
+   "oldHeight": 209.844,
    "position": {
-    "height": "144.844px",
-    "left": "1361px",
+    "height": "551.85px",
+    "left": "527px",
     "right": "20px",
-    "top": "124px",
-    "width": "350px"
+    "top": "76px",
+    "width": "800px"
    },
    "types_to_exclude": [
     "module",
@@ -787,7 +824,8 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "varInspector_section_display": "block",
+   "window_display": false
   }
  },
  "nbformat": 4,
